responsive fix on firefox devices

--- a/src/app/main-content/projects/projects.component.scss
+++ b/src/app/main-content/projects/projects.component.scss
@@ -126,7 +126,7 @@ section {
             width: 6px;
             height: 22px;
         }
-        @media (max-width: 490px) {
+        @media (max-width: 525px) {
             font-size: 14px;
         }
         @media (max-width: 410px) {
